fixed the alignment of the form on mobile devices

--- a/style/style.css
+++ b/style/style.css
@@ -1003,7 +1003,7 @@ footer{
     }
     
     .form-section-inner{
-        grid-template-columns: 1frKO;
+        grid-template-columns: 1fr;
     }
 
 }
